# ITMO_y2021

./: README.md
term1/algo/lab1/: A.cpp  B.cpp  C.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp  R.cpp
term1/algo/lab2/: A.cpp  C.cpp  F.cpp  H.cpp
term1/algo/lab3/: F.cpp  H.cpp  I.cpp  J.cpp
term1/dm/lab1/: A.cpp  B.cpp  C.cpp  E.cpp  F.cpp  H.cpp
term1/dm/lab2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.java  H.java  I.cpp
term1/dm/lab3/: 1.cpp  10.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  18.cpp  2.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  26.cpp  27.cpp  28.cpp  29.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
term1/java prog-intro/: Data.java  README.md  Reverse.java  ReverseAbc2.java  ReverseOdd2.java  Scanner.java  Sum.java  SumLong.java  WordStatInput.java  WordStatWords.java  Wspp.java  WsppPosition.java
term1/java prog-intro/expression/: Add.java  Base.java  Const.java  Container.java  Divide.java  Multiply.java  Subtract.java  Variable.java
term1/java prog-intro/markup/: Container.java  Element.java  Emphasis.java  Paragraph.java  Strikeout.java  Strong.java  Text.java
term1/java prog-intro/md2html/: Md2Html.java
term2/algo/lab1/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp  M.cpp  N.cpp
term2/algo/lab2/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  L.cpp
term2/algo/lab3/: A.cpp
term2/cpp/lab1/: README.md  main.c
term2/cpp/lab2/: README.md  generator.cpp  main.c  return_codes.h  tester.cpp
term2/cpp/lab3/: README.md  main.cpp  phonebook.cpp  phonebook.h  quicksort.h  return_codes.h
term2/cpp/lab4/: LN.cpp  LN.h  README.md  String.cpp  String.h  Vector.h  main.cpp  return_codes.h  utils.cpp  utils.h
term2/dm/lab1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  I.cpp
term2/dm/lab2 cs1.6/: A.cpp  B.cpp
term2/java prog-intro/: README.md
term2/java prog-intro/clojure-solutions/: expression.clj  linear.clj
term2/java prog-intro/javascript-solutions/: functionalExpression.js  objectExpression.js
term2/java prog-intro/prolog-solutions/: expression.pl  primes.pl  tree-map.pl
term3/cpp/bimap/: CMakeLists.txt  README.md  bimap.h  init-repo.sh  test-classes.cpp  test-classes.h  tests.cpp  tree.h  update-repo.sh
term3/cpp/intrusive-list/: CMakeLists.txt  README.md  advanced_tests.cpp  init-repo.sh  intrusive_list.cpp  intrusive_list.h  test_utils.h  tests.cpp  vcpkg.json
term3/cpp/intrusive-list/.github/workflows/: cpp.yml
term3/cpp/intrusive-list/ci-extra/: test.sh
term3/cpp/intrusive-ptr/: CMakeLists.txt  CMakeLists.txt.in  README.md  init-repo.sh  solution.h  tests.cpp
term3/cpp/intrusive-ptr/.github/workflows/: cpp.yml
term3/cpp/mandelbrot/: .gitignore  CMakeLists.txt  README.md  main.cpp  main_window.cpp  main_window.h  main_window.pro  main_window.ui  render.cpp  render.h  ui_main_window.h
term3/cpp/optional/: .gitignore  CMakeLists.txt  README.md  details.h  init-repo.sh  optional.h  test_classes.h  test_object.cpp  test_object.h  tests.cpp
term3/cpp/shared-ptr/: .clang-format  CMakeLists.txt  README.md  advanced-tests.cpp  block.h  init-repo.sh  shared-ptr.h  tests.cpp
term3/cpp/signal/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  init-repo.sh  intrusive_list.h  signals.h  tests.cpp
term3/dm/lab1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
term3/dm/lab2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
term3/os/alloc/: .gitignore  Makefile  README.md  grade
term3/os/cow/: .clang-format  Makefile  README.md  grade  grade-lazy  xv6-readme
term3/os/intro/: .gitignore  Makefile  README.md  grade  grade-dump2  tools-linux.md  tools-macos.md  tools-windows.md
term3/os/networkfs/: Makefile  README.md  entrypoint.c  header.h  http.c  http.h
term3/os/pe/: Header.h  Makefile  README.md  main.cpp
term4/alko/: Z-функция.cpp  Быстрый поиск подстроки в строке.cpp  Количество подстрок.cpp  Компоненты реберной двусвязности.cpp  Конденсация графа.cpp  Кратчайший путь -- 2.cpp  Мосты.cpp  Наибольшая общая подстрока.cpp  Поиск периода.cpp  Префикс-функция.cpp  Сравнения подстрок.cpp  Топологическая сортировка.cpp  Точки сочленения.cpp  Флойд.cpp  Цикл отрицательного веса.cpp
term4/dm/tur/: README.md
term4/matlog/B/: Makefile
term5/andan/images-internet-director/: .gitignore  README.md  data.csv  main.py
term5/andan/parser-internet-director/: README.md  data.csv  parser.py
term5/andan/supervised-internet-director/: LICENSE  README.md  main.py
term5/andan/text-internet-director/: README.md  data.csv  main.py
term5/andan/timeseries-internet-director/: .gitignore  README.md  main.py  (+2 more)
term5/asm/lzw/: CMakeLists.txt  README.md  lzw.asm  tmain.c
term5/asm/lzw/test_data/: in1  in2  in3  in5  in6  ref1  ref2  ref5  ref6
term5/asm/print/: CMakeLists.txt  README.md  print.asm  tmain.c
term5/fp/: README.md
term5/rust/: README.md
term6/ml/: E.cpp  G.cpp  H.cpp  I.cpp  J.cpp  ыфжвлоа РУ АШДЛОрыфлоаН РфлрыоивДЖЛОфырвлоНыфжлвр.txt
(+260 files in other folders)
